# eeql

./: README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: lsp.md
src/eeql/: __init__.py
src/eeql/_vscode/: eeql-lsp-client.vsix
src/eeql/core/: Aggregation.py  Dataset.py  DatasetEvent.py  Event.py  sql_metadata_adapter.py
src/eeql/vocabulary/: aggregations.py
tests/: conftest.py  test_compiler.py  test_dataset_ibis.py  test_lsp_core.py  test_parser.py  test_validator.py
